@@ -19,6 +19,7 @@ Changelog
 - Add mapping between public and gever permissions. [njohner]
 - Disable CSRF protect on webaction api post requests. [njohner]
 - Warn the user on overviews and overlays of trashed mails or documents. [Rotonen]
+- Include `include_root` parameter to `@navigation` endpoint to include the root object to the tree. [elioschmutz]
 - Include `root_interface` and `content_interfaces` parameter to `@navigation` endpoint to customize the navigation items [elioschmutz]
 - Include `@type`, `current` and `current_tree` property to `@navigation`-items. [elioschmutz]
 - Update plone.rest api to 3.7.2. [mathias.leimgruber]
